--- a/web/app/index.html
+++ b/web/app/index.html
@@ -16,56 +16,134 @@
   </head>
   <body ng-app="radUlFasaadApp">
     <!--[if lte IE 8]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+      <p class="browsehappy">You are using an <strong>outdated</strong> browser.
+          Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
     <!-- application header -->
-      <div class="header">
-      <nav class="navbar navbar-transparent navbar-fixed-top" role="navigation">
-        <div class="container">
-          <!-- Brand and toggle get grouped for better mobile display -->
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#left-navbar-menu-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-          </div>
+    <div ng-controller="MainCtrl as loginCtrl">
 
-          <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse" id="left-navbar-menu-collapse">
-            <ul class="nav navbar-nav">
-              <li class="dropdown">
-                <a href="javascript:" class="dropdown-toggle" data-toggle="dropdown">
-                  <img src="images/flags/US.png"/> English(US) <b class="caret"></b>
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a href="#"><img src="images/flags/GB.png"/> English(UK)</a></li>
-                  <li><a href="#"><img src="images/flags/FR.png"/> Français</a></li>
+        <div class="header">
+            <nav class="navbar navbar-transparent navbar-fixed-top" role="navigation">
+                <div class="container">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#left-navbar-menu-collapse">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                    </div>
 
-                  <li class="divider"></li>
-                  <li><a href="#"><img src="images/flags/TR.png"/> Türkçe <span class="label label-default">soon</span></a></li>
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse" id="left-navbar-menu-collapse">
+                        <ul class="nav navbar-nav">
+                            <li class="dropdown">
+                                <a href="javascript:" class="dropdown-toggle" data-toggle="dropdown">
+                                    <img src="images/flags/US.png"/> English(US) <b class="caret"></b>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#"><img src="images/flags/GB.png"/> English(UK)</a></li>
+                                    <li><a href="#"><img src="images/flags/FR.png"/> Français</a></li>
 
-                </ul>
-              </li>
-            </ul>
+                                    <li class="divider"></li>
+                                    <li>
+                                        <a href="#"><img src="images/flags/TR.png"/>
+                                            Türkçe <span class="label label-default">soon</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
 
-            <ul class="nav navbar-nav navbar-right">
-              <li>
-                <a href="javascript:">
-                  Login
-                </a>
-              </li>
-              <li>
-                <a href="javascript:">
-                  Signup
-                </a>
-              </li>
-            </ul>
-          </div><!-- /.navbar-collapse -->
-        </div><!-- /.container -->
-      </nav>
+                        <ul class="nav navbar-nav navbar-right">
+                            <li>
+                                <a href="javascript:" data-ng-click="loginCtrl.openLoginModal()">
+                                    Login
+                                </a>
+                            </li>
+                            <li>
+                                <a href="javascript:" data-ng-click="loginCtrl.openRegisterModal()">
+                                    Signup
+                                </a>
+                            </li>
+                        </ul>
+                    </div><!-- /.navbar-collapse -->
+                </div><!-- /.container -->
+            </nav>
+        </div>
+
+        <!-- Login Register Modal -->
+        <div class="login-register">
+            <div class="modal fade login" id="loginModal">
+                <div class="modal-dialog login animated">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                            <h4 class="modal-title">Login with</h4>
+                        </div>
+                        <div class="modal-body">
+                            <div class="box">
+                                <div class="content">
+                                    <div class="social">
+                                        <a class="circle github" href="javascript:">
+                                            <i class="fa fa-github fa-fw"></i>
+                                        </a>
+                                        <a id="google_login" class="circle google" href="javascript:">
+                                            <i class="fa fa-google-plus fa-fw"></i>
+                                        </a>
+                                        <a id="facebook_login" class="circle facebook" href="javascript:">
+                                            <i class="fa fa-facebook fa-fw"></i>
+                                        </a>
+                                    </div>
+                                    <div class="division">
+                                        <div class="line l"></div>
+                                        <span>or</span>
+                                        <div class="line r"></div>
+                                    </div>
+                                    <div class="error"></div>
+                                    <div class="form loginBox">
+                                        <form method="post" action="/login" accept-charset="UTF-8">
+                                            <input class="form-control" type="text" placeholder="Email" name="email">
+                                            <input class="form-control" type="password" placeholder="Password" name="password">
+                                            <input class="btn btn-default btn-login" type="button"
+                                                   value="Login" data-ng-click="loginCtrl.loginAjax()">
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <div class="content registerBox" style="display:none;">
+                                    <div class="form">
+                                        <form novalidate>
+                                            <input class="form-control" type="text" placeholder="Email" name="email">
+                                            <input class="form-control" type="password" placeholder="Password" name="password">
+                                            <input id="password_confirmation" class="form-control" type="password"
+                                                   placeholder="Repeat Password" name="password_confirmation">
+                                            <input class="btn btn-default btn-register" type="submit"
+                                                   value="Create account" name="commit">
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <div class="forgot login-footer">
+                                <span>
+                                    Looking to <a href="javascript:"
+                                                  data-ng-click="loginCtrl.showRegisterForm()">create an account</a> ?
+                                </span>
+                            </div>
+                            <div class="forgot register-footer" style="display:none">
+                                <span>Already have an account?</span>
+                                <a href="javascript:" data-ng-click="loginCtrl.showLoginForm()">Login</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- views -->
