--- a/web/app/index.html
+++ b/web/app/index.html
@@ -200,11 +200,26 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
+
+        <!-- Controllers -->
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+
+        <!-- Constant -->
+        <script src="scripts/constant/index.js"></script>
+
+        <!-- Directives -->
         <script src="scripts/directives/index.js"></script>
-        <script src="scripts/loader/loader.js"></script>
-        <script src="scripts/bs-validation/form-validation.js"></script>
+
+        <!-- Factories -->
+        <script src="scripts/factory/auth.js"></script>
+        <script src="scripts/factory/app-loader.js"></script>
+
+        <!-- Run -->
+        <script src="scripts/run/index.js"></script>
+
+        <!-- Config -->
+        <script src="scripts/config/form-validation.js"></script>
         <!-- endbuild -->
 </body>
 </html>
