implemented toast for notifications

--- a/web/app/index.html
+++ b/web/app/index.html
@@ -10,6 +10,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/please-wait/build/please-wait.css" />
     <link rel="stylesheet" href="bower_components/SpinKit/css/spinkit.css" />
+    <link rel="stylesheet" href="bower_components/angular-toastr/dist/angular-toastr.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -198,6 +199,7 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/please-wait/build/please-wait.js"></script>
     <script src="bower_components/bootstrap-angular-validation/dist/bootstrap-angular-validation-all.min.js"></script>
+    <script src="bower_components/angular-toastr/dist/angular-toastr.tpls.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
