--- a/web/app/index.html
+++ b/web/app/index.html
@@ -212,6 +212,7 @@
         <!-- Controllers -->
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/home.js"></script>
 
         <!-- Constant -->
         <script src="scripts/constant/index.js"></script>
