--- a/web/app/index.html
+++ b/web/app/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="bower_components/please-wait/build/please-wait.css" />
     <link rel="stylesheet" href="bower_components/SpinKit/css/spinkit.css" />
     <link rel="stylesheet" href="bower_components/angular-toastr/dist/angular-toastr.css" />
+    <link rel="stylesheet" href="bower_components/angular-timeline/dist/angular-timeline.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -203,6 +204,7 @@
     <script src="bower_components/please-wait/build/please-wait.js"></script>
     <script src="bower_components/bootstrap-angular-validation/dist/bootstrap-angular-validation-all.min.js"></script>
     <script src="bower_components/angular-toastr/dist/angular-toastr.tpls.js"></script>
+    <script src="bower_components/angular-timeline/dist/angular-timeline.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
