--- a/web/app/index.html
+++ b/web/app/index.html
@@ -44,21 +44,26 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="left-navbar-menu-collapse">
                         <ul class="nav navbar-nav">
-                            <li class="dropdown">
-                                <a href="javascript:" class="dropdown-toggle" data-toggle="dropdown">
-                                    <img src="images/flags/US.png"/> English(US) <b class="caret"></b>
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="#"><img src="images/flags/GB.png"/> English(UK)</a></li>
-                                    <li><a href="#"><img src="images/flags/FR.png"/> Français</a></li>
+                            <!--<li class="dropdown">-->
+                                <!--<a href="javascript:" class="dropdown-toggle" data-toggle="dropdown">-->
+                                    <!--<img src="images/flags/US.png"/> English(US) <b class="caret"></b>-->
+                                <!--</a>-->
+                                <!--<ul class="dropdown-menu">-->
+                                    <!--<li><a href="#"><img src="images/flags/GB.png"/> English(UK)</a></li>-->
+                                    <!--<li><a href="#"><img src="images/flags/FR.png"/> Français</a></li>-->
 
-                                    <li class="divider"></li>
-                                    <li>
-                                        <a href="#"><img src="images/flags/TR.png"/>
-                                            Türkçe <span class="label label-default">soon</span>
-                                        </a>
-                                    </li>
-                                </ul>
+                                    <!--<li class="divider"></li>-->
+                                    <!--<li>-->
+                                        <!--<a href="#"><img src="images/flags/TR.png"/>-->
+                                            <!--Türkçe <span class="label label-default">soon</span>-->
+                                        <!--</a>-->
+                                    <!--</li>-->
+                                <!--</ul>-->
+                            <!--</li>-->
+                            <li>
+                                <a href="#!/">
+                                    Title Name
+                                </a>
                             </li>
                         </ul>
 
