implemented listen voice text feature

--- a/web/app/index.html
+++ b/web/app/index.html
@@ -238,6 +238,10 @@
 
         <!-- Config -->
         <script src="scripts/config/form-validation.js"></script>
+
+        <!-- AngularVoice -->
+        <script src="scripts/lib/angularjs.voicerss-tts.min.js"></script>
+        <script src="scripts/config/angular-voice-config.js"></script>
         <!-- endbuild -->
 </body>
 </html>
