implemented time duration delay from current time

--- a/web/app/index.html
+++ b/web/app/index.html
@@ -212,6 +212,7 @@
     <script src="bower_components/angular-toastr/dist/angular-toastr.tpls.js"></script>
     <script src="bower_components/angular-timeline/dist/angular-timeline.js"></script>
     <script src="bower_components/angular-scroll-animate/dist/angular-scroll-animate.js"></script>
+    <script src="bower_components/angular-timeago/dist/angular-timeago.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -239,9 +240,12 @@
         <!-- Config -->
         <script src="scripts/config/form-validation.js"></script>
 
-        <!-- AngularVoice -->
+        <!-- text-to-voice -->
         <script src="scripts/lib/angularjs.voicerss-tts.min.js"></script>
         <script src="scripts/config/angular-voice-config.js"></script>
+        <!-- time-ago -->
+        <script src="scripts/config/time-ago-config.js"></script>
+
         <!-- endbuild -->
 </body>
 </html>
