added google platform library and auth credentials

--- a/web/app/index.html
+++ b/web/app/index.html
@@ -243,6 +243,8 @@
         <!-- time-ago -->
         <script src="scripts/config/time-ago-config.js"></script>
 
+        <!-- Google-Platform-Library -->
+        <script src="https://apis.google.com/js/platform.js" async defer></script>
         <!-- endbuild -->
 </body>
 </html>
