--- a/web/app/index.html
+++ b/web/app/index.html
@@ -48,23 +48,32 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="left-navbar-menu-collapse">
                         <ul class="nav navbar-nav">
-                            <!--<li class="dropdown">-->
-                                <!--<a href="javascript:" class="dropdown-toggle" data-toggle="dropdown">-->
-                                    <!--<img src="images/flags/US.png"/> English(US) <b class="caret"></b>-->
-                                <!--</a>-->
-                                <!--<ul class="dropdown-menu">-->
-                                    <!--<li><a href="#"><img src="images/flags/GB.png"/> English(UK)</a></li>-->
-                                    <!--<li><a href="#"><img src="images/flags/FR.png"/> Français</a></li>-->
+                            <li data-ng-if="loginCtrl.user != null" class="dropdown">
+                                <a title="{{loginCtrl.selectedVoice.LanguageName}}" href="javascript:"
+                                   class="dropdown-toggle" data-toggle="dropdown">
+                                    <i title="Language" class="fa fa-language" aria-hidden="true"></i>
+                                    <span ng-if="loginCtrl.selectedVoice.Name"
+                                          ng-bind="loginCtrl.selectedVoice.Name + ' (' + loginCtrl.selectedVoice.LanguageCode + ')'"></span>
+                                    <b class="caret"></b>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <div class="overflow">
+                                        <li title="{{voice.LanguageName}}"
+                                            data-ng-click="loginCtrl.selectedVoice = voice"
+                                            data-ng-repeat="voice in loginCtrl.voices track by $index">
+                                            <a href="javascript:" data-ng-bind="voice.Name + ' (' + voice.LanguageCode + ')'"></a>
+                                        </li>
+                                    </div>
 
-                                    <!--<li class="divider"></li>-->
-                                    <!--<li>-->
-                                        <!--<a href="#"><img src="images/flags/TR.png"/>-->
-                                            <!--Türkçe <span class="label label-default">soon</span>-->
-                                        <!--</a>-->
-                                    <!--</li>-->
-                                <!--</ul>-->
-                            <!--</li>-->
-                            <li>
+                                    <li class="divider"></li>
+                                    <li class="inactive-link">
+                                        <a href="javascript:" class="text-center">
+                                            Available voices
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li data-ng-if="loginCtrl.user == null">
                                 <a href="#!/">
                                     Title Name
                                 </a>
@@ -260,6 +269,7 @@
         <!-- Factories -->
         <script src="scripts/factory/auth.js"></script>
         <script src="scripts/factory/app-loader.js"></script>
+        <script src="scripts/factory/nlp.js"></script>
 
         <!-- Run -->
         <script src="scripts/run/index.js"></script>
